--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VoteDApp - Decentralized Voting Platform</title>
+    <title>VoteUp - Decentralized Voting Platform with End to End Verification</title>
     <meta name="description" content="A decentralized voting platform built on Ethereum. Create, join, and participate in transparent elections." />
     <style>
       /* Prevent flash of unstyled content */
